docs: Complete YAWL Documentation Upgrade Plan v5.2
- Migrate from Ant to Maven references in .claude/settings.json
- Update all deployment guides for Java 25 with virtual thread configs
- Create 5 new ADRs (006-010): OpenTelemetry, Caching, Circuit Breaking, Multi-Cloud, Virtual Threads
- Add MCP/A2A integration guides with authentication and quickstarts
- Create 20 package-info.java files for complete package documentation
- Archive historical files (graalvm/, VIOLATION_REPORT.md) with proper indexing
- Update .claude/INDEX.md with 10 skills and 12 agents
- Add yawl-worklet/README.md and comprehensive quickstart guides
- Fix observatory integration facts for MCP tools and autonomous agents

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>